# brstm-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml
brstm-encoder/: Cargo.toml
brstm-encoder/src/: ffmpeg.rs  main.rs  wav.rs
examples/: all-sizes.rs  brstm-check.rs  brstm-fix.rs  brstm-info.rs  extract-data.rs  extract-pcm.rs  read-write.rs  rw-check.rs
music-randomizer/: Cargo.toml
music-randomizer/src/: loader.rs  main.rs  randomizer.rs  reshaper.rs  spoiler_log.rs  vanilla_info.rs
src/: brstm.rs  encoder.rs  gc_dspadpcm.rs  lib.rs  reshaper.rs  structs.rs
