[package]
name = "brstm"
version = "0.4.2"
edition = "2021"
description = "Crate to read and write brstm files"
license = "MIT"
repository = "https://github.com/lepelog/brstm-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.12.0"
thiserror = "1.0.50"

[workspace]
members = ["music-randomizer", "brstm-encoder"]
