[package]
name = "brstm-encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
binrw = "0.13.3"
brstm = { path = ".." }
clap = { version = "4.4.12", features = ["derive", "cargo"] }
ffmpeg-next = { version = "6.1.0" }
