[package]
name = "music-randomizer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brstm = { path = ".." }
binrw = "0.11.2"
thiserror = "1.0.43"
clap = { version = "4.3.16", features = ["derive", "cargo"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
log = "0.4"
env_logger = "0.10.0"
