[package]
name = "music-randomizer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brstm = { path = ".." }
binrw = "0.15.0"
thiserror = "2.0.0"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
rand = "0.9.0"
rand_pcg = "0.9.0"
log = "0.4"
env_logger = "0.11.3"
